macros/tests/ui/interrupt_wrong_import.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `interrupt`
  --> tests/ui/interrupt_wrong_import.rs:11:1
   |
11 | #[interrupt]
   | ^^^^^^^^^^^^ use of undeclared crate or module `interrupt`
   |
   = note: this error originates in the attribute macro `interrupt` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: msp430-interrupt ABI is experimental and subject to change
  --> tests/ui/interrupt_wrong_import.rs:11:1
   |
11 | #[interrupt]
   | ^^^^^^^^^^^^
   |
   = note: see issue #38487 <https://github.com/rust-lang/rust/issues/38487> for more information
   = help: add `#![feature(abi_msp430_interrupt)]` to the crate attributes to enable
   = note: this error originates in the attribute macro `interrupt` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0570]: `"msp430-interrupt"` is not a supported ABI for the current target
  --> tests/ui/interrupt_wrong_import.rs:11:1
   |
11 | #[interrupt]
   | ^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `interrupt` (in Nightly builds, run with -Z macro-backtrace for more info)
